@startuml
' Alternative 2: spider-web view from the user-facing workflow.

skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam shadowing false

class "User Workflow\nUpload -> Separate -> Preview" as Center #FFFFFF
class "UploadRouter\n<<Client>>" as Upload #E4F7E7
class "AudioValidatorFactory\n<<Creator>>" as ValidatorFactory #E4F7E7
class "WavAudioValidatorFactory\n<<ConcreteCreator>>" as WavFactory #E4F7E7
class "SeparationService\n<<Facade>>" as Facade #DCEBFF
class "ModelStrategyResolver\nhelper" as Resolver #F4F6F8
class "SeparationEngine\n<<Context>>" as Engine #FFF1CC
interface "SeparationAlgorithm\n<<Strategy>>" as Algorithm #FFF1CC
class "NeoSSNetStrategy\n<<ConcreteStrategy>>" as NeoSSNet #FFF1CC
class "Heart/Lung WAV Outputs" as Output #F6F7F9

Center -down-> Upload : starts upload
Upload -down-> ValidatorFactory : requests validator
WavFactory -down-|> ValidatorFactory
Center -down-> Facade : starts separation
Facade -left-> Resolver : resolves strategy
Facade -right-> Engine : creates context
Engine -right-> Algorithm : calls interface
NeoSSNet -up-|> Algorithm
Algorithm -up-> Output : produces

@enduml
